--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -57,7 +57,7 @@
         style="@style/Widget.MaterialComponents.Button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="@id/linea2"
+        app:layout_constraintEnd_toStartOf="@id/boton2"
         app:layout_constraintStart_toStartOf="@id/linea1"
         app:layout_constraintTop_toBottomOf="@id/edit2"
         android:text="Login"
@@ -70,8 +70,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="@id/linea2"
-        app:layout_constraintStart_toStartOf="@id/linea1"
-        app:layout_constraintTop_toBottomOf="@id/boton1"
+        app:layout_constraintStart_toEndOf="@id/boton1"
+        app:layout_constraintTop_toBottomOf="@id/edit2"
         android:layout_marginTop="16dp"
         android:text="Signup"
         android:textSize="10sp"
@@ -82,13 +82,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.4"/>
+        app:layout_constraintGuide_percent="0.38"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/linea2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.6"/>
+        app:layout_constraintGuide_percent="0.62"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
