--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
         style="@style/Widget.MaterialComponents.Button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="@id/linea2"
+        app:layout_constraintEnd_toStartOf="@id/boton2"
         app:layout_constraintStart_toStartOf="@id/linea1"
         app:layout_constraintTop_toBottomOf="@id/edit2"
         android:text="Login"
@@ -70,8 +70,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="@id/linea2"
-        app:layout_constraintStart_toStartOf="@id/linea1"
-        app:layout_constraintTop_toBottomOf="@id/boton1"
+        app:layout_constraintStart_toEndOf="@id/boton1"
+        app:layout_constraintTop_toBottomOf="@id/edit2"
         android:layout_marginTop="16dp"
         android:text="Signup"
         android:textSize="10sp"
